--- a/dev/templates/header.html
+++ b/dev/templates/header.html
@@ -1,4 +1,23 @@
-<header>
-    <h2>Привет, Мир!)</h2>
+<header class="header">
+    <div class="container">
+            <a href="index.html" class="header-logo-link">
+            <img src="assets/img/logo.png" class="header-logo-img" alt="logo">
+        </a>
+        <nav class="header-nav">
+        <ul class="header-nav-list">
+            <li class="header-list-item"><a class="header-list-link" href="">Цены и сроки</a></li>
+            <li class="header-list-item"><a class="header-list-link" href="">Услуги</a></li>
+            <li class="header-list-item"><a class="header-list-link" href="">О компании</a></li>
+            <li class="header-list-item"><a class="header-list-link" href="">Контакты</a></li>
+            <li class="header-list-item"><a class="header-list-link" href="">Оформить груз</a></li>
+        </ul>
+        <button type="button" class="btn">Оформить груз</button>
+        </nav>
+        <button class="hamburger hamburger--spin" type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+          </button>
+    </div>
 </header>
 
