--- a/dev/sass/fonts.scss
+++ b/dev/sass/fonts.scss
@@ -1,7 +1,31 @@
 @font-face {
-    font-family: 'Gilroy-Regular';
-    src: url('./assets/fonts/Gilroy-Regular.woff') format('woff');
-    font-weight: normal; 
+    font-family: 'ProximaNova';
+    src: url('./assets/fonts/ProximaNovaLight.ttf') format('truetype');
+    font-weight: 300; 
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'ProximaNova';
+    src: url('./assets/fonts/ProximaNovaRegular.ttf') format('truetype');
+    font-weight: 400; 
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'ProximaNova';
+    src: url('./assets/fonts/ProximaNovaSemibold.ttf') format('truetype');
+    font-weight: 600; 
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'ProximaNova';
+    src: url('./assets/fonts/ProximaNovaBold.ttf') format('truetype');
+    font-weight: 700; 
     font-style: normal;
     font-display: swap;
 }
