--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -1,2 +1,8 @@
 @media screen and (max-width: 1199px) {
+    .header-nav-list {
+        gap: 20px;
+    }
+    .header-list-link {
+        padding: 13px 12px 10px;
+    }
 }
