--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -1,8 +1,10 @@
 ///fonts///
-$font-primary: "Open Sans";
-$font-secondary:  "monospace";
-$font-size: 16px;
+$font-primary: "ProximaNova";
 
 ///colors///
-$primary-color: #222;
-$secondary-color: #f00;
+$primary-color: #E58D35;
+$text-color:#fff;
+$secondary-color: #89C249;
+$bg-color: #282B38;
+$bg-secondary: #363A4D;
+$container-mobile-padding: 20px;
