--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -1,20 +1,31 @@
-h1{
-    font-size: 39px;
+h1,
+.h1 {
+    font-size: 56px;
 }
-h2{
+
+h2,
+.h2 {
     font-size: 36px;
 }
-h3{
-    font-size: 32px;
-}
-h4{
+
+h3,
+.h3 {
     font-size: 24px;
 }
-h5{
+
+h4,
+.h4 {
     font-size: 22px;
 }
-h6{
+
+h5,
+.h5 {
     font-size: 20px;
+}
+
+h6,
+.h6 {
+    font-size: 18px;
 }
 
 h1,
@@ -56,6 +67,9 @@ body{
     margin-right: auto;
     margin-left: auto;
 }
+.container-xxl{
+    max-width: 1840px;
+}
 .btn{
     width: 171px;
     height: 50px;
@@ -68,6 +82,36 @@ body{
     font-weight: 600;
     line-height: 146%;
     display: inline-block;
+    &:hover{
+        background: $secondary-color;
+    }
+}
+.btn-lg{
+    max-width: 297px;
+    padding: 23px 97px 22px 39px;
+    font-size: 16px;
+    background-color: $primary-color;
+    border-radius: 90px;
+    color: #FFFFFF;
+    border: none;
+    position: relative;
+
+    &:hover{
+        background: $secondary-color;
+    }
+}
+.icon {
+    margin: 0 -14px 0 47px;
+    width: 27px;
+    height: 27px;
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    transform: translate(-50%, -50%);
+    left: 70%;
+}
+.btn-lg:hover .icon{
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(10deg) brightness(109%) contrast(101%);
 }
 ol {
     counter-reset: li;
@@ -100,3 +144,50 @@ ul {
         }
     }
 }
+.slick-arrow {
+    font-size: 0;
+    width: 92px;
+    height: 92px;
+    border: none;
+    background: center no-repeat transparent;
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='42' viewBox='0 0 24 42' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.40237 41.2538C3.1171 41.5391 2.76051 41.6817 2.36827 41.6817C1.97602 41.6817 1.61943 41.5391 1.33416 41.2538C0.763614 40.6833 0.763614 39.7561 1.33416 39.1856L19.5202 20.9996L1.33416 2.81351C0.763614 2.24296 0.763614 1.31583 1.33416 0.74529C1.9047 0.174747 2.83183 0.174747 3.40237 0.74529L22.6225 19.9654C23.1931 20.536 23.1931 21.4631 22.6225 22.0337L3.40237 41.2538Z' fill='%23ffffff'/%3E%3C/svg%3E%0A");
+
+    &:hover {
+        background-image: url("data:image/svg+xml,%3Csvg width='24' height='42' viewBox='0 0 24 42' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.40237 41.2538C3.1171 41.5391 2.76051 41.6817 2.36827 41.6817C1.97602 41.6817 1.61943 41.5391 1.33416 41.2538C0.763614 40.6833 0.763614 39.7561 1.33416 39.1856L19.5202 20.9996L1.33416 2.81351C0.763614 2.24296 0.763614 1.31583 1.33416 0.74529C1.9047 0.174747 2.83183 0.174747 3.40237 0.74529L22.6225 19.9654C23.1931 20.536 23.1931 21.4631 22.6225 22.0337L3.40237 41.2538V41.2538Z' fill='%2389C249'/%3E%3C/svg%3E%0A");
+    }
+
+    &.slick-prev {
+        transform: rotate(180deg);
+    }
+}
+
+    
+
+    ul.slick-dots {
+        display: flex;
+        padding: 0;
+        margin: 0;
+        gap: 26px;
+        justify-content: center;
+
+        & li:before {
+            display: none;
+        }
+
+        & button {
+            border-radius: 50%;
+            width: 8px;
+            height: 8px;
+            font-size: 0;
+            border: none;
+            padding: 0;
+            border: 2px solid #fff;
+            background-color: transparent;
+        }
+        & li {
+            font-size: 0;
+        }
+    }
+    li.slick-active button {
+        background-color: yellow;
+    }
