--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -1,10 +1,42 @@
 @media screen and (max-width: 1024px) {
+    h1,
+    .h1 {
+        font-size: 32px;
+    }
+    
+    h2,
+    .h2 {
+        font-size: 36px;
+    }
+    
+    h3,
+    .h3 {
+        font-size: 24px;
+    }
+    
+    h4,
+    .h4 {
+        font-size: 22px;
+    }
+    
+    h5,
+    .h5 {
+        font-size: 16px;
+    }
+    
+    h6,
+    .h6 {
+        font-size: 16px;
+    }
     .container {
         padding-right: $container-mobile-padding;
         padding-left: $container-mobile-padding;
     }
+    .container-xxl{
+        padding: 0;
+    }
     .header{
-        padding: 18px 0 15px;
+        padding: 18px 0 8px;
         &::before{
             content: "";
             position:absolute;
@@ -32,8 +64,10 @@
     position: absolute;
     top: -510px;
     left: 0;
-    padding: 41x 0 60px 0;
+    padding: 41px 0 60px 0;
     transition: .8s;
+    z-index: 1;
+    box-shadow: 14px 22px 40px 0 #1e23429c;
     &.show{
         top: 72px;
     }
@@ -64,6 +98,37 @@
 .hamburger{
     z-index: 2;
 }
+
+.first-screen{
+    .container{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 26px 40px;
+        z-index: 1;
+        position: relative;
+    }
+}
+.banner-item{
+    border-radius: 0;
+}
+.banner-title{
+    max-width: 260px;
+    margin-bottom: 8p;
+}
+.banner-subtitle{
+    max-width: 335px;
+    margin-bottom: 22px;
 }
 
-
+.slick-track::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #04091199;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+}
